--- a/index.html
+++ b/index.html
@@ -9,4 +9,47 @@
   <body>
     <div id="app"></div>
   </body>
+  <style>
+    body.modal-open {
+      position: fixed;
+      width: 100%;
+    }
+  </style>
+  <script>
+    var ModalHelper = (function(bodyCls) {
+    var scrollTop, doc, reg;
+    var bodyClassName = "";
+    var bodyEle = document.body;
+    return {
+        afterOpen: function() {
+            doc = document.documentElement.scrollTop ? document.documentElement : bodyEle;
+            scrollTop = doc.scrollTop;
+ 
+            if(bodyEle.classList){
+                bodyEle.classList.add(bodyCls)
+            }else{
+                bodyEle.className += " " + bodyCls;
+            }
+ 
+            bodyEle.style.top = -scrollTop + 'px';
+            bodyClassName = bodyEle.className;
+        },
+         
+        beforeClose: function() {
+            if(bodyEle.classList){
+                bodyEle.classList.remove(bodyCls)
+            }else{
+                reg = new RegExp("\\b" + bodyCls + "\\b", "g", "gi");
+                if(reg.test(bodyClassName)){
+                    bodyClassName = bodyClassName.replace(reg, "");
+                    bodyEle.className = bodyClassName;
+                }
+            }
+             
+            bodyEle.style.top = "";
+            doc.scrollTop = scrollTop;
+        }
+    };
+})('modal-open');
+  </script>
 </html>
